Opened 14 years ago

Closed 14 years ago

#1392 closed defect (fixed)

pcm_bluray crash

Reported by: ami_stuff Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: crash fpe
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

http://samples.mplayerhq.hu/A-codecs/IMC/mensaje.avi

(gdb) r -acodec pcm_bluray -i mensaje.avi -vn -f null -
Starting program: d:\mingw\msys\1.0\ffmpeg-head-ab7d6cb\ffmpeg_g.exe -acodec pcm
_bluray -i mensaje.avi -vn -f null -
[New Thread 3028.0xbd8]
ffmpeg version 0.10.2.git-ab7d6cb Copyright (c) 2000-2012 the FFmpeg developers
  built on May 30 2012 13:37:47 with gcc 4.6.1
  configuration: --disable-ffprobe --enable-gpl
  libavutil      51. 55.100 / 51. 55.100
  libavcodec     54. 23.100 / 54. 23.100
  libavformat    54.  6.101 / 54.  6.101
  libavdevice    54.  0.100 / 54.  0.100
  libavfilter     2. 77.100 /  2. 77.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
[avi @ 03bb2340] non-interleaved AVI
[h263i @ 03bbc7c0] Warning: not compiled with thread support, using thread emula
tion
[pcm_bluray @ 03bbcbc0] Warning: not compiled with thread support, using thread
emulation

Program received signal SIGFPE, Arithmetic exception.
0x00545c53 in av_get_audio_frame_duration (avctx=0x3bbcbc0, frame_bytes=64)
    at libavcodec/utils.c:2199
2199                        return frame_bytes / ((FFALIGN(ch, 2) * bps) / 8);
(gdb) bt
#0  0x00545c53 in av_get_audio_frame_duration (avctx=0x3bbcbc0,
    frame_bytes=64) at libavcodec/utils.c:2199
#1  0x004700e0 in get_audio_frame_size (enc=0x3bbcbc0, mux=0,
    size=<optimized out>) at libavformat/utils.c:805
#2  compute_frame_duration (pnum=0x22f718, pden=0x22f71c, st=<optimized out>,
    pc=0x0, pkt=<optimized out>) at libavformat/utils.c:848
#3  0x00470ee4 in compute_pkt_fields (s=0x3bb2340, st=0x3bc1500, pc=0x0,
    pkt=0x22fa80) at libavformat/utils.c:1012
#4  0x0047553c in compute_pkt_fields (pkt=0x22fa80, pc=0x0, st=0x3bc1500,
    s=0x3bb2340) at libavformat/utils.c:979
#5  read_frame_internal (s=0x3bb2340, pkt=0x22fa80)
    at libavformat/utils.c:1327
#6  0x004773db in avformat_find_stream_info (ic=0x3bb2340, options=0x3bc1ce0)
    at libavformat/utils.c:2558
#7  0x0040ab87 in opt_input_file (o=0x22fdc8, opt=0x3bc0eaf "i",
    filename=<optimized out>) at ffmpeg.c:4327
#8  0x00413a7f in parse_option (optctx=0x22fdc8, opt=<optimized out>,
    arg=0x3bc0eb1 "mensaje.avi", options=0xb74bc0) at cmdutils.c:305
#9  0x00413ce2 in parse_options (optctx=0x22fdc8, argc=9,
    argv=<optimized out>, options=0xb74bc0,
    parse_arg_function=0x410748 <opt_output_file>) at cmdutils.c:338
#10 0x00b12ef5 in main (argc=9, argv=0x3bc0df0) at ffmpeg.c:5906
(gdb)

Change History (2)

comment:1 by Carl Eugen Hoyos, 14 years ago

Component: undeterminedavcodec
Keywords: crash fpe added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Michael Niedermayer, 14 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.